--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,26 @@
+/*----  CSS FOR INDEX.HTML  ----*/
+
 html {
     scroll-behavior: smooth;
 }
 body {
-    background: url(spikes.png);
+    background: url(/spikes.png);
     margin: 0;
     padding: 0;
-    /* max-width: 1200px;
-    margin: auto; */
-    font-family: monospace;
+    font-family: "Lato", sans-serif;
+    width: 100%;
 }
 nav {
     width: 100%;
+    position: fixed;
     font-size: 18px;
-    /* background: #262626; */
+    background: url(/spikes.png);
     overflow: hidden;
-    /* position: fixed; */
     top: 0;
     border-bottom: 1px solid purple;
 }
 nav h1 {
-    float: left;
-    margin-left: 110px;
+    margin-left: 30px;
     color: black;
     cursor: pointer;
 }
@@ -46,280 +46,207 @@ nav ul li a {
 nav ul li a:hover{
     color: violet;
 }
-.txt-img-container {
-    /* background: url(abstract-antique-backdrop-background-164005.jpg) no-repeat ; */
-    /* background-size: cover; */
-    /* border: 2px solid black; */
-    /* max-width: 80%; */
-    max-width: 70%;
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 70px;
-    display: grid;
-    grid-template-columns: 60% 70%;
-    grid-template-rows: 98% 100%;
-    column-gap: 20px;
-    row-gap: 10px;
-    /* display: flex;
-    flex-direction: row; */
+main {
+    /* background-color: blueviolet; */
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 5vh;
+    font-family: "Lato", sans-serif;
 }
-.active {
-    color: violet ;
+.txt-img-container {
+    width: 100%;
+    margin: 0 auto;
+    display: grid;
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: 70% auto;
+    justify-content: space-between;
 }
 .txt-container {
-    /* background-color: #efefef; */
-    background: url(abstract-antique-backdrop-background-164005.jpg) no-repeat;
-    background-size: cover;
-    /* border: 1px solid black; */
-    /* max-width: 73%;
-    height: auto; */
-    /* box-shadow: 5px 5px 20px rgba(0,0,0, 0.7); */
-    margin: 0;
+    box-shadow: 5px 5px 20px rgba(0,0,0, 0.7);
     text-align: center;
     font-size: x-large;
     font-weight: 900;
+    border-radius: 1vh;
+    border: 2px solid purple;
+    margin-right: 30px;
+    padding: 30px;
+    /* display: flex;
+    flex-direction: column; */
+}
+.txt-container h1 {
+    font-weight: 600;
 }
 .txt-container p {
-    font-size: larger;
-    line-height: 40px;
+    font-size: 1.8vw;
+    /* line-height: 40px; */
 }
-button {
-    margin: 50px 20px;
-    padding: 20px;
-    background-color: black;
+div a button {
+    font-size: 1.2rem;
+    border-radius: 1vh;
+    border: 1px solid purple;
+    outline: none;
+    margin: 10vh 2vw;
+    padding: 10px;
     cursor: pointer;
     margin-left: 20px;
-}
-button:hover {
-    font-size: 18px;
-}
-.txt-container a button {
+    transition: 300ms linear;
+    background: purple;
     text-decoration: none;
-    font-weight: 700;
-    color: whitesmoke;
+    font-weight: 500;
+    color: white;
 }
+div a button:hover {
+    transform: scale(1.1);
+    background: url(/spikes.png);
+    color: black;
+}
+
 .img-container {
-    /* border: 1px solid black; */
-    background: url(pic2.jpeg) no-repeat;
-    background-size: cover;
-    max-width: 51%;
     box-shadow: 5px 5px 20px rgba(0,0,0, 0.7);
+    border-radius: 1vh;
 }
-/* .img-container img {
-    /* width: 378px;
-    height: 504px; */
-    /*width: 378px;
-    height: 588px;
-    margin: 0;
-}*/
-.about-me-container {
-    background-color: #efefef;
-    border: 1px solid violet;
-    border-radius: 30px;
-    font-size: 18px;
-    max-width: 70%;
-    margin: auto;
-    margin-top: 30px;
-    padding: 20px;
-    box-shadow: 5px 5px 20px rgba(0,0,0, 0.7);
-}
-.about-me-container p {
-    text-indent: 50px;
-    line-height: 30px;
-}
-.grid-container {
-    /* background-color: rebeccapurple; */
-    max-width: 90%;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
-    grid-gap: 10px 10px;
-}
-.grid-item img {
-    box-shadow: 5px 5px 20px rgba(0,0,0, 0.7);
-}
-/* .grid-item1 img {
-    width: 640px;
-    height: 505px;
-}
-.grid-item2 img {
-    width: 560px;
-    height: 758px;
-}
-.grid-item3 img {
-    width: 540px;
-    height: 405px;
-} */
-.grid-item2 {
-    grid-row: 1 / 3;
-    margin-left: 180px;
-}
-.grid-item1 img {
-    width: 500px;
-    height: 355px;
-    border: 1px solid violet;
-}
-.grid-item2 img {
-    width: 460px;
-    height: 730px;
-    border: 1px solid violet;
-}
-.grid-item3 img {
-    width: 500px;
-    height: 355px;
-    border: 1px solid violet;
-}
-
-/* .grid-item4 img {
-    width: 816px;
-    height: 612px;
-} */
-
-/* h1 {
-    margin: 80px 0 20px 80px;
-    text-align: center;
-    padding: 0;
-} */
-
-.submit:hover {
-    background-color: violet;
+.img-container img {
+    width: 100%;
+    height: 100%;
+    border-radius: 1vh;
 }
 footer {
     border-top: 1px solid purple;
     font-size: 18px;
     text-align: center ;
+    margin-top: 5vh;
+    font-family: "Lato", sans-serif;
+}
+/* ---- index.html ends ----*/ 
+
+/* ---- about.html ----*/ 
+
+.about-me-container {
+    width: 90%;
+    box-shadow: 5px 5px 20px rgba(0,0,0, 0.7);
+    text-align: center;
+    font-size: x-large;
+    font-weight: 900;
+    border-radius: 1vh;
+    border: 2px solid purple;
+    margin-right: 30px;
+    padding: 30px;
+    margin: 20px auto;
 }
 
-/* div h1 {
-    width: 35%;
-    background: black;
-    color: violet;
-    text-align: center;
-} */
-div ul li {
-    list-style: none;
-    clear: left;
-    color: whitesmoke;
+.pic-container {
+    width: 80%;
+    margin: 30px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
 }
+.item1 {
+    grid-row: 1 / 3;
+}
+.item2, .item3 {
+    grid-column: 2 / 4;
+    height: 400px;
+}
+.item img {
+    width: 100%;
+    height: 100%;
+}
+
+
+/* ---- about.html ends ----*/ 
+
+
+/* ---- Contact.html ----*/ 
 
 .contact-p {
-    font-size: large;
-    margin-left: 480px;
-    line-height: 30px;
+    text-align: center;
+    font-size: 1.2rem;
 }
-.iconify {
-     width: 24px; 
-     height: 24px;
+.contact-p a {
+    text-decoration: none;
+}
+section {
+    width: 90%;
+    margin: 30px auto;
 }
 form {
     text-align: center;
-    margin-top: 0;
-    margin-bottom: 70px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
 }
+
 textarea {
     height: 100px;
 }
-input, textarea {
-    margin-bottom: 10px;
+svg {
+    margin-right: 20px;
+}
+ form input,form textarea {
+     margin: 0 auto;
+    margin-top: 10px;
     font-size: 11pt;
-    padding: 15px 10px 10px;
+    padding: 10px;
+    width: 70%;
     border: 1px solid #cecece;
     background-color: #efefef;
     color: #787575;
     border-radius: 5px;
-    width: 70%;
     outline: none;
 }
-input:focus, textarea:focus {
-    border: 1px solid violet;
-}
-/* 4k responsive */
- @media (min-width: 2560px) {
-    .img-container {
-        background: url(pic2.jpeg) no-repeat ;
-        background-size: 350px;
-        max-width: 28%;
-        box-shadow: 5px 5px 20px rgba(0,0,0, 0.7);
-    }
-    .grid-item2 {
-        grid-row: 1 / 3;
-        margin-left: 580px;
-    }
+form input:focus, form textarea:focus {
+    border: 1px solid purple;
 } 
-/* Laptop and Desktop responsive */
-@media (max-width: 1440px) {
-    .grid-item2 {
-        grid-row: 1 / 3;
-        margin-left: 140px;
-    } 
-} 
- @media (max-width: 1024px) {
-    .img-container {
-        background: url(pic2.jpeg) no-repeat ;
-        background-size: 500px;
-        max-width: 75%;
-        box-shadow: 5px 5px 20px rgba(0,0,0, 0.7);
-    }
-    .grid-item2 {
-        grid-row: 1 / 3;
-        margin-left: 50px;
-    } 
-    .grid-container {
-        /* background-color: rebeccapurple; */
-        max-width: 90%;
-        margin: auto;
-        margin-top: 50px;
-        margin-bottom: 20px;
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 50% 50%;
-        /* grid-gap: 10px 10px; */
-    }
-    .grid-item1 img {
-        width: 400px;
-        height: 255px;
-    }
-    .grid-item2 img {
-        width: 360px;
-        height: 535px;
-    }
-    .grid-item3 img {
-        width: 400px;
-        height: 255px;
-    }
+.submit:hover {
+    background-color:purple;
+    color: white;
 }
-/* tablet responsive //Still have an issue to fix here....// */
-@media (width: 768px) {
+
+
+
+/* ---- Contact.html ends----*/ 
+@media only screen and (max-width: 768px) {
     nav h1 {
-        float: left;
-        margin-left: 60px;
-        color: black;
-        cursor: pointer;
+        margin-left: 20px;
     }
-    nav ul {
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        margin-right: 50px;
+    .txt-img-container {
+        grid-template-columns: 55% auto;
     }
-    
-    .grid-item1 img {
-        width: 300px;
-        height: 155px;
+    .txt-container {
+        padding: 10px;
+        font-size: 1.2rem;
+        font-weight: 600;
     }
-    .grid-item2 img {
-        width: 260px;
-        height: 335px;
+    div a button {
+        font-size: .9rem;
     }
-    .grid-item3 img {
-        width: 300px;
-        height: 155px;
+
+    .pic-container {
+        display: flex;
+        flex-direction: column;
     }
-    .contact-p {
-        font-size: large;
-        margin-left: 360px;
+}
+
+@media only screen and (max-width: 450px) {
+    nav h1 {
+        margin-left: 0px;
+    }
+    .txt-img-container {
+        grid-template-columns: auto auto; 
+        gap: 20px;
+    }
+    .txt-container {
+        grid-column: 1/ 3;
+    }
+    .txt-container p {
+        font-size: 1rem;
+    }
+    .img-container {
+        grid-column: 1/3;
+    }
+    div a button {
+        margin: 20px auto;
+        padding: 15px;
     }
 }
