--- a/ContactFrom_v1/css/main.css
+++ b/ContactFrom_v1/css/main.css
@@ -72,7 +72,8 @@ p {
   font-family: Montserrat-Regular;
   font-size: 14px;
   line-height: 1.7;
-  color: #666666;
+  /* color: #666666; */
+  color: black;
   margin: 0px;
 }
 
