--- a/Css/index.css
+++ b/Css/index.css
@@ -10,11 +10,11 @@ body {
 }
 nav {
   width: 100%;
+  height: 90px;
   position: fixed;
   font-size: 18px;
   overflow: hidden;
-  top: 0;
-  border-bottom: 1px solid purple;
+  /* top: 0; */
 }
 nav h1 {
   color: rgb(101, 155, 39);
@@ -42,6 +42,13 @@ nav ul li a {
 }
 .row {
   height: 100%;
+}
+.row.first {
+  background: rgb(101, 155, 39);
+  background: -webkit-linear-gradient(left, #00c6ff, rgb(101, 155, 39));
+  background: -o-linear-gradient(left, #00c6ff, rgb(101, 155, 39));
+  background: -moz-linear-gradient(left, #00c6ff, rgb(101, 155, 39));
+  background: linear-gradient(left, #00c6ff, rgb(101, 155, 39));
 }
 .row .txt-container {
   color: #010508;
@@ -95,7 +102,14 @@ nav ul li a {
   justify-content: space-between;
 }
 
-.page-header h2 {
+.page-header span {
+  font-size: 60px;
+  font-family: "Lato", sans-serif;
+}
+.page-header span .color {
+  color: #145468;
+}
+div.page-header h2 {
   color: rgb(101, 155, 39);
 }
 .about-me-container {
@@ -116,4 +130,35 @@ nav ul li a {
   max-width: 100%;
   height: 600px;
   border-radius: 10px;
+}
+.social-icons {
+  margin-top: 40px;
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+@media only screen and (max-width: 450px) {
+  nav h1 {
+    font-size: 25px;
+  }
+  .row .txt-container {
+    height: 100%;
+    margin: 100px auto;
+  }
+  .row .cta {
+    margin-bottom: 40px;
+    font-size: 15px;
+  }
+  .row.head {
+    margin-top: 100px;
+  }
+  .txt-container h2 {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 10px;
+  }
+  .txt-container p {
+    font-size: 16px;
+  }
 }
